--- a/android/app/src/experimental/res/values/colors.xml
+++ b/android/app/src/experimental/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="primary_dark">#660B0B0B</color>
-	<item name="splashBackground" type="color">#1D74F5</item>
-	<item name="notification_text" type="color">#1D74F5</item>
+	<color name="primary_dark">#fc5836</color>
+	<item name="splashBackground" type="color">#FFFFFF</item>
+	<item name="notification_text" type="color">#fc5836</item>
 </resources>
